# bluepill

./: .gitignore  CMakeLists.txt  windows_setup_instructions.txt
BMS_Bluepill_YTEC_5/: BMS_Bluepill_YTEC_5.ino  master_reader_7_pmu.ino
Drivers/CMSIS/DSP/Examples/ARM/arm_linear_interp_example/: arm_linear_interp_example_f32.c
GCC/: startup_stm32f103c8tx.s
Middlewares/ST/STM32_USB_Device_Library/Core/Src/: usbd_ctlreq.c
Projects/BluePill/: CMakeLists.txt
Projects/BluePill/Applications/: CMakeLists.txt
Projects/BluePill/Applications/CDCI2C_Console/: CMakeLists.txt
Projects/BluePill/Applications/CDCI2C_Console/Inc/: main.h
Projects/BluePill/Applications/CDCI2C_Console/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
Projects/BluePill/Applications/FatFs_uSD/: CMakeLists.txt
Projects/BluePill/Applications/FatFs_uSD/Inc/: ffconf.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
Projects/BluePill/Applications/FatFs_uSD/Src/: fatfs_sd.c  main.c  stm32f1xx_it.c
Projects/BluePill/Applications/SD2/Src/: stm32f1xx_it.c
Projects/BluePill/Applications/SDCARD_SPI_F103/: CMakeLists.txt
Projects/BluePill/Applications/SDCARD_SPI_F103/Core/Src/: main.c
Projects/BluePill/Applications/Signal_Analyzer/Inc/: cdc_console.h  main.h  stm32f1xx_it.h
Projects/BluePill/Applications/Signal_Analyzer/Src/: cdc_console.c  main.c  stm32f1xx_it.c
Projects/BluePill/BMS/: CMakeLists.txt
Projects/BluePill/BMS/BMS_MASTER/Inc/: main.h  math_functions.h  stm32f1xx_it.h
Projects/BluePill/BMS/BMS_MASTER/Src/: main.c  math_functions.c  stm32f1xx_it.c
Projects/BluePill/BMS/BMS_MASTER/Tests/: estimacion_original.cpp
Projects/BluePill/BMS/BMS_MASTER_V2/Inc/: MST_CURR_calibration.h  MST_vbat_calibration.h  MST_vpow_calibration.h  cdc_console.h  estimation.h  main.h  stm32f1xx_hal_conf.h
Projects/BluePill/BMS/BMS_MASTER_V2/Src/: cdc_console.c  main.c  stm32f1xx_hal_msp.c
Projects/BluePill/BMS/BMS_MASTER_V2/Tests/: ProcessData.py  test_original.cpp
Projects/BluePill/BMS/BMS_MASTER_V2/Tests/BasicLinearAlgebra/impl/: BasicLinearAlgebra.h
Projects/BluePill/BMS/BMS_MASTER_V2/Tests/data/: test_data.h  thomas.h
Projects/BluePill/BMS/BMS_SLAVE/Inc/: main.h
Projects/BluePill/BMS/BMS_SLAVE/Src/: main.c
Projects/BluePill/BMS/BMS_SLAVE/Tests/Arduino-Interpolation/src/: InterpolationLib.h
Projects/BluePill/BMS/BMS_SLAVE/Tests/data/: sample_usage_of_test_data.c  thomas.xlsx
Projects/BluePill/BMS/BMS_SLAVE_V2/: CMakeLists.txt
Projects/BluePill/BMS/BMS_SLAVE_V2/Inc/: SLVA_CH1_calibration.h  SLVA_CH2_calibration.h  SLVB_CH1_calibration.h  SLVB_CH2_calibration.h  cdc_console.h  main.h
Projects/BluePill/BMS/BMS_SLAVE_V2/Src/: main.c  usbd_cdc_if.c
Projects/BluePill/BMS/Inc/: common.h  main.h  stm32f1xx_it.h
Projects/BluePill/BMS/Src/: estimation.c  main.c  stm32f1xx_it.c  usbd_conf.c
Projects/BluePill/BMS/Tests/: CMakeLists.txt  ProcessData.py  estimacion_original.cpp  estimacion_original.h
Projects/BluePill/BMS/Tests/BasicLinearAlgebra/impl/: NotSoBasicLinearAlgebra.h
Projects/BluePill/BMS/Tests/data/: E1_NMC.mat  main.c  thomas.c  thomas.h
Projects/BluePill/BMS_POWER/: CMakeLists.txt
Projects/BluePill/BMS_POWER/BMS_POWER_SLAVE/: CMakeLists.txt
Projects/BluePill/BMS_POWER/BMS_POWER_SLAVE/Inc/: main.h
Projects/BluePill/BMS_POWER/BMS_POWER_SLAVE/Src/: cdc_console.c  main.c
Projects/BluePill/Examples/: CMakeLists.txt
Projects/BluePill/Examples/I2C/I2C_TwoBoards_ComPolling/Inc/: main.h  si5351.h
Projects/BluePill/Examples/I2C/I2C_TwoBoards_ComPolling/Src/: main.c  si5351.c
Projects/BluePill/Examples/SPI/: CMakeLists.txt
Projects/BluePill/Examples/SPI/SPI_FullDuplex_ComPolling/: CMakeLists.txt
Projects/BluePill/Examples/SPI/SPI_FullDuplex_ComPolling/Inc/: main.h
Projects/BluePill/Examples/SPI/SPI_FullDuplex_ComPolling/Src/: main.c
Projects/BluePill/Examples/USB/: CMakeLists.txt
Projects/BluePill/Examples/USB/CDC/: CMakeLists.txt
Projects/BluePill/Examples/USB/CDC/Inc/: stm32f1xx_it.h
Projects/BluePill/Examples/USB/CDC/Src/: main.c
Projects/BluePill/Examples/USB/CDC2I2C/: CMakeLists.txt
Projects/BluePill/Examples/USB/CDC2I2C/Inc/: main.h  stm32f1xx_hal_conf.h
Projects/BluePill/Examples/USB/CDC2I2C/Src/: main.c  stm32f1xx_hal_msp.c
Projects/BluePill/Examples_FreeRTOS/GPIO/Blinky/: CMakeLists.txt
Projects/BluePill/Examples_LL/: CMakeLists.txt
Projects/BluePill/Examples_LL/ADC/: CMakeLists.txt
Projects/BluePill/Examples_LL/ADC/ADC_MultiChannelSingleConversion/Inc/: main.h
Projects/BluePill/Examples_LL/ADC/ADC_MultiChannelSingleConversion/Src/: main.c  stm32f1xx_it.c
Projects/BluePill/Examples_LL/ADC/ADC_MultiChannelSingleConversion_TimerTrigger/Inc/: main.h  stm32f1xx_it.h
Projects/BluePill/Examples_LL/ADC/ADC_MultiChannelSingleConversion_TimerTrigger/Src/: main.c  stm32f1xx_it.c
Projects/BluePill/Examples_LL/ADC/ADC_SingleConversion_TriggerSW/Inc/: main.h
Projects/BluePill/Examples_LL/ADC/ADC_SingleConversion_TriggerSW/Src/: main.c
Projects/BluePill/Examples_LL/GPIO/: CMakeLists.txt
Projects/BluePill/Examples_LL/GPIO/GPIO_InfiniteLedToggling/: CMakeLists.txt
Projects/BluePill/Examples_LL/GPIO/GPIO_InfiniteLedToggling/Src/: main.c
Projects/BluePill/Examples_LL/GPIO/GPIO_InfiniteLedToggling_Init/: CMakeLists.txt
Projects/BluePill/Examples_LL/GPIO/GPIO_InfiniteLedToggling_Init/Src/: main.c
Projects/BluePill/Examples_LL/TIM/: CMakeLists.txt
Projects/BluePill/Examples_LL/TIM/ADC_SingleConversion_TriggerTimer_DMA/Inc/: main.h
Projects/BluePill/Examples_LL/TIM/ADC_SingleConversion_TriggerTimer_DMA/Src/: main.c
Projects/BluePill/Examples_LL/TIM/TIM_TimeBase/Inc/: main.h
Projects/BluePill/Examples_LL/TIM/TIM_TimeBase/Src/: main.c  stm32f1xx_it.c
Projects/BluePill/cmake/: toolchain-arm-none-eabi.cmake
Projects/STM32F103RB-Nucleo/Examples/TIM/TIM_TimeBase/Inc/: stm32f1xx_hal_conf.h
SDCARD_SPI_F103/: .cproject  .mxproject  .project  SDCARD_SPI_F103 Debug.launch  SDCARD_SPI_F103.ioc
SDCARD_SPI_F103/Core/Src/: main.c
cmake/: toolchain-arm-none-eabi.cmake
